
syntax="proto3";

package licensePackage;
service LicenseService {
		rpc AffectType(AffectTypeRequest) returns (ResultRequestAffectation) {}
		rpc DeleteAffictation(AffectTypeRequest)returns (ResultRequestAffectation){}
		rpc AuthPermission(AuthPermissionRequest) returns (AuthPermissionResponse) {}
}

message AffectTypeRequest {
		enum Type{
			USERS = 0;
			DATACENTER = 1;
		}
		Type type = 1;
		int32 tenantId = 2;
		int32 typeId = 3;
}

//////////auth //////////////
message AuthPermissionRequest {
		int32 userId = 1;
}
message AuthPermissionResponse {
		bool permission = 1;
}
////////////////////////////////
message ResultRequestAffectation {
		bool result = 1;
}